@@ -10,11 +10,19 @@ SPVM::Net::SSLeay::ASN1_OBJECT - ASN1_OBJECT Data Structure in OpenSSL
 
 =head1 Description
 
-Net::SSLeay::ASN1_OBJECT class in L<SPVM> represents L<ASN1_OBJECT|https://docs.openssl.org/master/man3/OBJ_nid2obj> data structure in OpenSSL.
+Net::SSLeay::ASN1_OBJECT class in L<SPVM> represents L<ASN1_OBJECT|https://docs.openssl.org/3.3/man3/ASN1_OBJECT_new> data structure in OpenSSL.
 
 =head1 Usage
 
   use Net::SSLeay::ASN1_OBJECT;
+
+=head1 Class Methods
+
+=head2 new
+
+C<static method new : L<Net::SSLeay::OBJECT|SPVM::Net::SSLeay::OBJECT> ();>
+
+Calls native L<OBJECT_new|https://docs.openssl.org/3.3/man3/ASN1_OBJECT_new> function, creates a new  L<Net::SSLeay::OBJECT|SPVM::Net::SSLeay::OBJECT> object, sets the pointer value of the object to the return value of the native function, and returns the new object.
 
 =head1 Instance Methods
 
