@@ -6,6 +6,7 @@
     * Add Net::SSLeay::ASN1_INTEGER#new method.
     * Add Net::SSLeay::ASN1_INTEGER#set_int64 method.
     * Add Net::SSLeay::ASN1_INTEGER#get_int64 method.
+    * Add Net::SSLeay::ASN1_OBJECT#new method.
     
   [Bug Fix]
     * Fix bugs that exception messages for SSL are not shown well.
